# director-diffusion

./: .gitignore  .pre-commit-config.yaml  EFFICIENCY_REPORT.md  README.md  pyproject.toml  requirements.txt  ruff.toml  u-net.py
.github/workflows/: ci.yml
scripts/: analyze_directors.py
src/: __init__.py  auto_caption.py  caption.py  config.py  evaluate.py  images.py  serve.py  train.py  utils.py
tests/: test_smoke.py
