[project]
name = "nano-diffusion"
version = "0.1.0"
description = "A simple diffusion model for nano-scale image generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "modal>=0.73.24",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchview>=0.2.6",
    "torchvision>=0.21.0",
]
